k8s/booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-api
spec:
  selector:
    app: booking-api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
