k8s/booking-system-all.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-demo
---
# Deployment Booking-system
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-system
  namespace: k8s-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-system
  template:
    metadata:
      labels:
        app: booking-system
    spec:
      containers:
        - name: booking-system
          image: booking-system:1.0.0
          ports:
            - containerPort: 8080
---
# Service Booking-system
apiVersion: v1
kind: Service
metadata:
  name: booking-system
  namespace: k8s-demo
spec:
  selector:
    app: booking-system
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
# Ingress Booking-system
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-system-ingress
  namespace: k8s-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: booking-system.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booking-system
                port:
                  number: 80
